data/derived/sp14/progs/unify/prog4556.ml.out
Characters 579-594:
  | _ -> if (recurse > 2) then buildCosine(rand, depth-1) else buildSine(rand, depth-1);;
                                          ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
